updated custom color names

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
   <link rel="stylesheet" href="./dist/styles.css">
 </head>
-<body class="font-poppins bg-violet text-white px-[80px] pt-[50px] pb-[40px] min-h-screen flex flex-col justify-between">
+<body class="font-poppins bg-primaryViolet text-white px-[80px] pt-[50px] pb-[40px] min-h-screen flex flex-col justify-between">
   <img src="./images/logo.svg" alt="Huddle logo" class="max-w-[200px] h-auto">
   <main class="flex">
     <img src="./images/illustration-mockups.svg" alt="mockup of the huddle illustration" class="flex-1">
