--- a/index.html
+++ b/index.html
@@ -14,23 +14,23 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
   <link rel="stylesheet" href="./dist/styles.css">
 </head>
-<body class="font-poppins bg-primaryViolet text-white px-[80px] pt-[50px] pb-[40px] min-h-screen flex flex-col justify-between">
-  <img src="./images/logo.svg" alt="Huddle logo" class="max-w-[200px] h-auto">
-  <main class="flex">
-    <img src="./images/illustration-mockups.svg" alt="mockup of the huddle illustration" class="flex-1">
+<body class="antialiased font-poppins bg-primaryViolet bg-desktop-pattern bg-no-repeat text-white pl-[74px] pr-[80px] pt-[50px] pb-[40px] min-h-screen flex flex-col justify-start">
+  <img src="./images/logo.svg" alt="Huddle logo" class="max-w-[210px] h-auto mb-[85px] select-none">
+  <main class="flex flex-wrap gap-[55px]">
+    <img src="./images/illustration-mockups.svg" alt="mockup of the huddle illustration" class="flex-1 select-none">
     <div class="flex-1">
-      <h1 class="">Build The Community Your Fans Will Love</h1>
-      <p>
+      <h1 class="mb-4 text-[38px] tracking-wide leading-relaxed mt-[45px] font-bold">Build The Community Your Fans Will Love</h1>
+      <p class="mb-5 font-light text-[1.1rem] leading-relaxed tracking-tight">
         Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
         Create connections with your users as you engage in genuine discussion.
       </p>
-      <button>Register</button>
+      <button class="bg-white transition-all ease-in-out hover:bg-primaryMagenta rounded-full text-lg text-primaryViolet px-[4rem] py-[.8rem] shadow-xl select-none">Register</button>
     </div>
   </main>
-  <div class="flex justify-end gap-2">
-    <div><i class="fab fa-facebook-f"></i></div>
-    <div><i class="fab fa-twitter"></i></div>
-    <div><i class="fab fa-instagram"></i></div>
+  <div class="flex mt-auto justify-end gap-3">
+    <div class="cursor-pointer p-5 aspect-square h-[28px] w-auto grid place-content-center rounded-full border border-white hover:border-primaryMagenta group transition-all ease-in-out"><i class="fab fa-facebook-f transition-all ease-in-out group-hover:text-primaryMagenta text-[1.2rem]"></i></div>
+    <div class="cursor-pointer p-5 aspect-square h-[28px] w-auto grid place-content-center rounded-full border border-white hover:border-primaryMagenta group transition-all ease-in-out"><i class="fab fa-twitter transition-all ease-in-out group-hover:text-primaryMagenta text-[1.2rem]"></i></div>
+    <div class="cursor-pointer p-5 aspect-square h-[28px] w-auto grid place-content-center rounded-full border border-white hover:border-primaryMagenta group transition-all ease-in-out"><i class="fab fa-instagram transition-all ease-in-out group-hover:text-primaryMagenta text-[1.2rem]"></i></div>
   </div>
 </body>
 </html>
