simplified the tailwind class names

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
   <link rel="stylesheet" href="./dist/styles.css">
 </head>
-<body class="antialiased font-poppins bg-primaryViolet bg-desktop-pattern bg-no-repeat text-white pl-[74px] pr-[80px] pt-[50px] pb-[40px] min-h-screen flex flex-col justify-start">
+<body class="antialiased font-poppins bg-primaryViolet bg-desktop-pattern bg-cover bg-no-repeat text-white pl-[74px] pr-[80px] pt-[50px] pb-[40px] min-h-screen flex flex-col justify-start">
   <img src="./images/logo.svg" alt="Huddle logo" class="max-w-[210px] h-auto mb-[85px] select-none">
   <main class="flex flex-wrap gap-[55px]">
     <img src="./images/illustration-mockups.svg" alt="mockup of the huddle illustration" class="flex-1 select-none">
@@ -28,9 +28,9 @@
     </div>
   </main>
   <div class="flex mt-auto justify-end gap-3">
-    <div class="cursor-pointer p-5 aspect-square h-[28px] w-auto grid place-content-center rounded-full border border-white hover:border-primaryMagenta group transition-all ease-in-out"><i class="fab fa-facebook-f transition-all ease-in-out group-hover:text-primaryMagenta text-[1.2rem]"></i></div>
-    <div class="cursor-pointer p-5 aspect-square h-[28px] w-auto grid place-content-center rounded-full border border-white hover:border-primaryMagenta group transition-all ease-in-out"><i class="fab fa-twitter transition-all ease-in-out group-hover:text-primaryMagenta text-[1.2rem]"></i></div>
-    <div class="cursor-pointer p-5 aspect-square h-[28px] w-auto grid place-content-center rounded-full border border-white hover:border-primaryMagenta group transition-all ease-in-out"><i class="fab fa-instagram transition-all ease-in-out group-hover:text-primaryMagenta text-[1.2rem]"></i></div>
+    <div class="social-container group"><i class="fab fa-facebook-f social-icons  group-hover:text-primaryMagenta"></i></div>
+    <div class="social-container group"><i class="fab fa-twitter social-icons  group-hover:text-primaryMagenta"></i></div>
+    <div class="social-container group"><i class="fab fa-instagram social-icons group-hover:text-primaryMagenta"></i></div>
   </div>
 </body>
 </html>
