--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <button class="bg-white transition-all ease-in-out hover:bg-primaryMagenta rounded-full text-lg text-primaryViolet px-[4rem] py-[.8rem] shadow-xl select-none">Register</button>
     </div>
   </main>
-  <div class="flex mt-auto justify-end gap-3">
+  <div class="flex mt-auto justify-end gap-3 hover:hidden">
     <div class="social-container group"><i class="fab fa-facebook-f social-icons  group-hover:text-primaryMagenta"></i></div>
     <div class="social-container group"><i class="fab fa-twitter social-icons group-hover:text-primaryMagenta"></i></div>
     <div class="social-container group"><i class="fab fa-instagram social-icons group-hover:text-primaryMagenta"></i></div>
