adjusted some css that was through feedback

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   <link rel="stylesheet" href="./dist/styles.css">
 </head>
 <body class="antialiased bg-primaryViolet bg-mobile-pattern md:bg-desktop-pattern bg-100% md:bg-cover bg-no-repeat text-white pl-[68px] md:pl-[74px] pr-[75px] md:pr-[80px] pt-[64px] md:pt-[50px] pb-[80px] md:pb-[40px] min-h-screen flex flex-col justify-start">
-  <img src="./images/logo.svg" alt="Huddle logo" class="md:max-w-[210px] max-w-[255px] h-auto mb-[120px] md:mb-[85px] select-none">
-  <main class="flex text-center md:text-left flex-wrap gap-[55px]">
-    <img src="./images/illustration-mockups.svg" alt="mockup of the huddle illustration" class="flex-1 select-none">
+  <header><img src="./images/logo.svg" alt="Huddle logo" class="md:max-w-[210px] max-w-[255px] h-auto mb-[120px] md:mb-[85px] select-none"></header>
+  <main class="flex text-center md:text-left justify-center flex-wrap gap-[55px]">
+    <img src="./images/illustration-mockups.svg" alt="mockup of the huddle illustration" class="flex-1 select-none max-w-[40em] w-full object-contain object-top">
     <div class="flex-1">
       <h1 class="mb-5 md:mb-4 text-[2.75rem] md:text-[38px] font-poppins tracking-wide leading-relaxed mt-[45px] font-bold">Build The Community Your Fans Will Love</h1>
       <p class="font-openSans mb-10 md:mb-5 font-light text-[2rem] md:text-[1.1rem] leading-relaxed tracking-normal md:tracking-tight">
